docs: user README, architecture pointer, CI matrix, pluginVerifier
Document how to dogfood 0.1.0-SNAPSHOT and expand CI for unit,
enhanced JBR, and pluginVerifier.